[gd_scene load_steps=2 format=3 uid="uid://cn2rxki1m3jkv"]

[ext_resource type="Script" path="res://UI/new_profile.gd" id="1_swcm5"]

[node name="NewProfile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_swcm5")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Name This Profile:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ProfileNameEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(175, 16)
layout_mode = 2
placeholder_text = "Profile 1"
alignment = 1

[node name="SubmitButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "OK"

[node name="CreateButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[connection signal="text_submitted" from="CenterContainer/VBoxContainer/HBoxContainer/ProfileNameEdit" to="." method="_on_profile_name_edit_text_submitted"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
